--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-name",
+  "name": "currency-exchanger",
   "version": "1.0.0",
-  "description": "description-here",
+  "description": "changes us currency into a selected currency",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
@@ -11,7 +11,7 @@
     "debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand"
   },
   "keywords": [],
-  "author": "your-name-here",
+  "author": "Erich Richter",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
